--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -4,31 +4,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SettingActivity"
-    android:paddingLeft="20dp">
-   <FrameLayout
-       android:id="@+id/fl_connect"
-       android:layout_width="match_parent"
-       android:layout_height="54dp">
-       <TextView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="@string/device_connect"
-           android:textColor="#ff000000"
-           android:layout_gravity="center_vertical"
-           android:textSize="14sp"
-           />
-       <ImageView
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center_vertical|right"
-           android:src="@mipmap/right" />
-       <TextView
-           android:layout_width="match_parent"
-           android:layout_height="1px"
-           android:layout_gravity="bottom"
-           android:background="@color/line" />
-   </FrameLayout>
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    tools:context=".SettingActivity">
+
+    <FrameLayout
+        android:id="@+id/fl_connect"
+        android:layout_width="match_parent"
+        android:layout_height="54dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/device_connect"
+            android:textColor="#ff000000"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|right"
+            android:src="@mipmap/right" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_gravity="bottom"
+            android:background="@color/line" />
+    </FrameLayout>
 
     <FrameLayout
         android:id="@+id/fl_album"
@@ -48,6 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             android:src="@mipmap/right" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
@@ -68,19 +73,14 @@
             android:textColor="#ff000000"
             android:textSize="14sp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:src="@mipmap/right" />
-
         <TextView
             android:id="@+id/tv_grid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="44dp"
+            android:layout_marginRight="15dp"
             android:textSize="14sp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
@@ -101,26 +101,22 @@
             android:textColor="#ff000000"
             android:textSize="14sp" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:src="@mipmap/right" />
-
         <TextView
             android:id="@+id/tv_scale"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="44dp"
+            android:layout_marginRight="15dp"
             android:text="4:3"
             android:textSize="14sp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_gravity="bottom"
             android:background="@color/line" />
     </FrameLayout>
+
     <FrameLayout
         android:id="@+id/fl_account"
         android:layout_width="match_parent"
@@ -165,19 +161,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
             android:src="@mipmap/right" />
+
         <TextView
             android:id="@+id/tv_language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="44dp"
+            android:layout_marginRight="35dp"
             android:textSize="14sp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_gravity="bottom"
             android:background="@color/line" />
     </FrameLayout>
+
     <FrameLayout
         android:id="@+id/fl_clear"
         android:layout_width="match_parent"
@@ -191,15 +190,89 @@
             android:textColor="#ff000000"
             android:textSize="14sp" />
 
-        <ImageView
+        <TextView
+            android:id="@+id/tv_cache"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
+            android:layout_marginRight="15dp"
             android:src="@mipmap/right" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1px"
             android:layout_gravity="bottom"
             android:background="@color/line" />
     </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="54dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/firmwareupdate"
+            android:textColor="#ff000000"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|right"
+            android:src="@mipmap/right" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_gravity="bottom"
+            android:background="@color/line" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_about"
+        android:layout_width="match_parent"
+        android:layout_height="54dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/aboutrf1"
+            android:textColor="#ff000000"
+            android:textSize="14sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|right"
+            android:src="@mipmap/right" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_gravity="bottom"
+            android:background="@color/line" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="80dp"
+            android:background="#aa000000"
+            android:paddingLeft="40dp"
+            android:paddingTop="5dp"
+            android:paddingRight="40dp"
+            android:paddingBottom="5dp"
+            android:text="退出登录"
+            android:textColor="@color/white" />
+    </FrameLayout>
+
 </LinearLayout>
