--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="yellow">#C26132</color>
     <color name="transparent_88">#88000000</color>
+    <color name="transparent_99">#99000000</color>
     <color name="transparent">#00000000</color>
     <color name="translucent_background">#80000000</color>
     <color name="translucent_22">#33000000</color>
