--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -205,6 +205,7 @@
     </FrameLayout>
 
     <FrameLayout
+        android:id="@+id/fl_update"
         android:layout_width="match_parent"
         android:layout_height="54dp">
 
