--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="dialog_nostroke" parent="@android:style/Theme.Dialog">
-        <item name="android:windowFrame">@color/transparent</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@color/transparent</item>
-        <item name="android:windowBackground">@drawable/dialog_radius_background_nostroke</item>
-        <item name="android:backgroundDimEnabled">true</item>
-        <item name="android:backgroundDimAmount">0.7</item>
+
+    <style name="AccentButton" parent="ThemeOverlay.AppCompat.Dark">
+        <!-- customize colorButtonNormal for the disable color -->
+        <item name="colorButtonNormal">@color/gray</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+        <!-- customize colorAccent for the enabled color -->
+    </style>
+    <style name="horizontal_progressbar">
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:progressDrawable">@drawable/progressbar_bg</item>
     </style>
 </resources>
