--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="white_tt"> #FFE5BD</color>
     <color name="bg_black">#df000000</color>
     <color name="theme">#FD9857</color>
-    <color name="gray">#29292E</color>
+    <color name="gray">#797979</color>
     <color name="line">#797979</color>
     <color name="white_ttt"> #FFD564</color>
     <color name="transparent_88">#88000000</color>
