--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black">
-
+fafa
     <FrameLayout
         android:id="@+id/fl_preview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical">
 
-        <com.godox.light.view.AutoFitTextureView
+        <com.godox.light.view.GLTextureView
             android:id="@+id/textureview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
